--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-ui": "^0.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-motion": "^0.5.0",
     "react-redux": "^5.0.3",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.8",
