--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "express": "^4.15.2",
     "material-ui": "^0.17.1",
+    "morgan": "^1.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-highlight-words": "^0.8.0",
